[package]
name = "xts-mode"
version = "0.5.1"
authors = ["Aphek <bilkow@tutanota.com>"]
edition = "2021"
license = "MIT"

readme = "README.md"
description = "XTS block mode implementation in rust"
repository = "https://github.com/pheki/xts-mode"
documentation = "https://docs.rs/xts-mode"
keywords = ["encryption", "xts", "block-cipher"]
exclude = ["test_files"]
categories = ["cryptography", "no-std"]
rust-version = "1.63"

[features]
default = ["std"]
std = []
openssl_tests = ["dep:openssl"]
benchmarks = ["dep:criterion"]

[dependencies]
cipher = "0.4.4"
byteorder = { version = "1.5.0", default-features = false }
# Actually dev-dependencies enabled only for openssl tests and benchmarks,
# but dev-dependencies can't be optional.
openssl = { version = "0.10.72", optional = true }
criterion = {version = "0.5", optional = true }

[dev-dependencies]
# For tests
hex-literal = "0.4.1"
aes = "0.8.4"
rand = "0.9.1"

[[bench]]
name = "encryption"
harness = false
